@@ -190,3 +190,4 @@ Changes between Qt3 and Qt4 port (to be completed)
 * release 0.40.1
 - ContextHelp::setContextHelp() needs fixing, crashes on m_pBrowser->end()
     - has not crashed as of current git master on Ubuntu 18.04
+- text hint interface needs fixing -- updated usage
